bug: Fix alignment and reduce logo

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,10 @@ html {
    background-size: cover;
 }
 
+.logo {
+   max-width: 70px;
+}
+
 .header__info {
    margin-top: 70px;
 }
